# shakespeare-lora

./: .gitignore  README.md  model.py  pyproject.toml  report.md  settings.jsonl  sweep.py  train.py  utils.py
checkpoints/alpaca-mlp-16-32_1796/: README.md  adapter_config.json
checkpoints/alpaca-mlp-8-32_1796/: adapter_config.json
configs/: settings-llmjudge.jsonl  settings.jsonl  test-llmjudge.jsonl  test.jsonl
dataset/: generate.py  shakespeare_test_alpaca.jsonl  shakespeare_test_ultrafeedback.jsonl
eval/: llmjudge.py  mmlu.py  smoltalk.py
logs/: llmjudge_shakespeare-lora_alpaca-mlp-8-32.jsonl  shakespeare-lora_alpaca-mlp-8-32.jsonl
results/: plots.py
scripts/: chat.py  sweep.py  train.py
src/: model.py
