[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "shakespeare-lora"
version = "0.1.0"
description = "Systematic LoRA ablations (target={mlp,attn,all}, rank=4..64) with chat + training sweep."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "torch>=2.5",
  "transformers>=4.44,<5",
  "peft>=0.12",
  "huggingface_hub>=0.24",
  "hf-transfer",
  "datasets>=2.20",
  "openai>=1.65",
  "tqdm>=4.66",
  "vllm>=0.9",
  "matplotlib>=3.10",
]


[project.scripts]
chat-lora = "scripts.chat:main"
sweep-lora = "scripts.sweep:main"

[tool.hatch.build]
include = [
  "chat.py",
  "train.py",
  "model.py",
  "utils.py",
  "eval/**/*.py",
  "README.md",
]